4.0.0.20220604 Add and/or standardize project name, description, and url. Use ${maven.compiler.release} to specify compilation target.